--- a/src/xfusionserver/README
+++ b/src/xfusionserver/README
@@ -2,7 +2,7 @@
 
     Home Site ...... https://www.xfusion.com
     Program ........ XFUSION server plugin for Cacti
-    Version ........ 1.2
+    Version ........ 1.0
     Purpose ........ View/Manage XFUSION server informations from Cacti
 
 *******************************************************************************/
@@ -37,7 +37,6 @@
 
 
 ----[ Changelog
-    
-	--- version 1.2 ---
-    XFUSION Initial release.
+	--- 0.1 ---
+		Initial release
 
